# SW-Guru-Group-9

./: .gitignore  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  hw1-grading.yml  tests.yml
Homework 1/: Makefile  README.md  stopwords_es.txt  test_wc0.py  wc0.py  wc0_fixed.py
Homework 2/: README.md
Homework 3/: Makefile  REPORT.md  Readme.md  S1.awk  S2.awk  S3.awk  S4.awk  S5.awk  checks.py
Homework 3/etc/: ell.txt
Homework 4/: README.md
Homework 6/: README.md  hello.py  pyproject.toml  test.py
Homework 6/src/: hello.py
Homework 6/tests/: test_hello.py
docs/: .nojekyll  index.html
