[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grp9-akshay-ryan"
version = "0.1.0"
readme = "README.md"
description = "Homework 6 submission for SW Guru Group 9"
authors = [
    {name = "Akshay Ashutosh Dongare"},
    {name = "Ryan Mikula"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["hello"]
